--- a/ConsultaCnpj/ConsultaCnpj.csproj
+++ b/ConsultaCnpj/ConsultaCnpj.csproj
@@ -64,6 +64,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="View\frmBancoDados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\frmBancoDados.Designer.cs">
+      <DependentUpon>frmBancoDados.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\frmEmpresas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +85,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="View\frmBancoDados.resx">
+      <DependentUpon>frmBancoDados.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\frmEmpresas.resx">
       <DependentUpon>frmEmpresas.cs</DependentUpon>
     </EmbeddedResource>
